@@ -144,6 +144,7 @@
     the top. This is because if we have a portrait picture (where the height
     needs adjusting), then the artist's face is likely to be nearer the top
     than the middle.
+89. Middle click volume button to mute/unmute.
 
 0.9.2
 -----
